Implement detailed validation of items in cart with updated reponse with invalid item ids